# keytap

./: .gitignore  AGENTS.md  Cargo.toml  Info.plist  Makefile  README.md  flake.nix  index.html  nearby.html  tapkey.entitlements
.github/workflows/: deploy-relay.yml  pages.yml  release-tag.yml  release.yml  test.yml
Sources/: Tapkey.swift
Tapkey.app/Contents/MacOS/: tapkey
cli/: Cargo.toml
cli/src/: main.rs  nearby.rs
cli/tests/: e2e_crypto.rs
core/: Cargo.toml
core/src/: lib.rs
distribution/: encrypt-cf-token.sh  notarize.sh  setup-signing.sh
distribution/secrets/: CLOUDFLARE_API_TOKEN.age  MACOS_P12_BASE64.age  MACOS_P12_PASSWORD.age  NOTARY_ISSUER_ID.age  NOTARY_KEY_BASE64.age  NOTARY_KEY_ID.age  PROVISION_PROFILE_BASE64.age
mac/: Cargo.toml  build.rs
mac/src/: auth.rs  credential.rs  main.rs
mac/swift-lib/Sources/PasskeyBridge/: PasskeyBridge.swift
macos/: Cargo.toml
macos/src/: lib.rs
macos/swift-lib/Sources/PasskeyBridge/: PasskeyBridge.swift
relay/: package-lock.json  package.json  wrangler.toml
relay/src/: index.ts
secrets/: NOTARY_ISSUER_ID.age  NOTARY_KEY_BASE64.age  NOTARY_KEY_ID.age
web/: 404.html  app.html  app.js  index.html  nearby-bridge.js  nearby.css  nearby.html  nearby.js
web/relay/src/: index.js
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
web/wasm/tests/: wasm_parity.rs
