[package]
name = "tapkey-mac"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "tapkey"
path = "src/main.rs"

[dependencies]
tapkey-core = { path = "../core" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSData", "NSError", "NSNotification", "NSString", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSRunningApplication", "NSWindow"] }
objc2-authentication-services = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
time = { version = "0.3", features = ["formatting"] }
